--- a/c-punks/scss/style.scss
+++ b/c-punks/scss/style.scss
@@ -1,6 +1,6 @@
-@import 'add-ons/_variables';
-@import 'add-ons/_standart';
-@import 'add-ons/_fonts';
+@import "add-ons/_variables";
+@import "add-ons/_standart";
+@import "add-ons/_fonts";
 
 // CONTENT OTHER | BODY | HEADER | MAIN | FOOTER
 
@@ -8,6 +8,10 @@
   p {
     color: #b5b5b5;
     font-size: 12px;
+  }
+
+  @media (max-width: 1600px) {
+    display: none !important;
   }
 }
 
@@ -35,7 +39,8 @@ body {
   display: flex;
   justify-content: space-between;
   flex-direction: column;
-  min-height: 100vh;
+  overflow-y: hidden;
+  height: 100vh !important;
 }
 
 header {
@@ -44,13 +49,29 @@ header {
     justify-content: space-between;
     padding: 4% 12% 0;
 
+    @media (max-width: 1600px) {
+      padding: 5% 5% 0;
+    }
+
     .navigation {
       width: 20%;
+
+      @media (max-width: 1600px) {
+        width: 40%;
+      }
+
+      @media (max-width: 1600px) {
+        width: 60%;
+      }
 
       .links {
         z-index: 1005;
         display: flex;
         justify-content: space-between;
+
+        @media (max-width: 600px) {
+          font-size: 10px;
+        }
 
         li {
           &:hover {
@@ -79,6 +100,10 @@ header {
               position: absolute;
               margin-left: 12px;
               margin-top: -5px;
+
+              @media (max-width: 600px) {
+                font-size: 8px;
+              }
             }
           }
         }
@@ -90,6 +115,10 @@ header {
       align-items: flex-end;
       width: 30%;
       justify-content: space-between;
+
+      @media (max-width: 1600px) {
+        width: 50%;
+      }
     }
 
     ul {
@@ -156,6 +185,23 @@ footer {
       width: 10%;
       text-decoration: underline;
 
+      @media (max-width: 1340px) {
+        width: 20%;
+      }
+
+      @media (max-width: 1000px) {
+        width: 30%;
+        font-size: 14px;
+      }
+
+      @media (max-width: 600px) {
+        font-size: 10px;
+      }
+
+      @media (max-width: 400px) {
+        width: 50%;
+      }
+
       &:hover {
         color: red;
         transform: translate(10px, 0px);
@@ -165,6 +211,14 @@ footer {
     .hr-wrapper {
       width: 90%;
       padding: 50px 100px;
+
+      @media (max-width: 1600px) {
+        padding: 50px 100px 50px 130px;
+      }
+
+      @media (max-width: 600px) {
+        padding: 50px 20px 50px 70px;
+      }
 
       hr {
         background: #ffffff;
@@ -186,6 +240,7 @@ footer {
     }
   }
 }
+
 // END OTHER | CONTENT BODY | HEADER | MAIN | FOOTER
 
 // SLIDER CONTENT
@@ -196,13 +251,240 @@ footer {
 
   &__text {
     position: absolute;
-    left: calc(25rem + 3vw);
-    top: calc(16rem + 3vw);
+    left: 25vw;
+    top: 16vw;
     z-index: 10;
     color: #fff;
+    overflow: hidden;
+
+    @media (max-width: 1340px) {
+      left: 20vw;
+    }
+
+    @media (max-width: 600px) {
+      left: 12vw;
+    }
+
+    @media (max-width: 400px) {
+      left: 4vw;
+      top: 50vw;
+    }
 
     h2 {
-      font-size: 124px;
+      font-size: 8rem;
+
+      @media (max-width: 1000px) {
+        font-size: 6rem;
+      }
+
+      @media (max-width: 800px) {
+        font-size: 4rem;
+      }
+
+      @media (max-width: 600px) {
+        font-size: 3rem;
+      }
+    }
+
+    span {
+      font-size: 24px;
+
+      @media (max-width: 600px) {
+        font-size: 14px;
+      }
+    }
+
+    p {
+      font-size: 54px;
+      line-height: 80px;
+
+      @media (max-width: 1340px) {
+        font-size: 44px;
+        line-height: 54px;
+      }
+
+      @media (max-width: 1340px) {
+        font-size: 34px;
+        line-height: 44px;
+      }
+
+      @media (max-width: 600px) {
+        font-size: 24px;
+        line-height: 34px;
+      }
+
+      @media (max-width: 600px) {
+        font-size: 20px;
+        line-height: 30px;
+      }
+
+      &.small {
+        font-size: 14px;
+        line-height: 15px;
+        padding: 0 5px;
+      }
+
+      &.grey {
+        color: grey;
+      }
+    }
+
+    a {
+      font-size: 74px;
+      line-height: 94px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      width: 75%;
+
+      p {
+        font-size: 74px;
+        line-height: 124px;
+        border-bottom: 1px solid transparent;
+        transition: ease-out 0.2s;
+
+        @media (max-width: 600px) {
+          font-size: 2rem;
+          line-height: 3rem;
+        }
+      }
+
+      &:hover > p {
+        border-bottom: 1px solid #fff;
+      }
+
+      img {
+        height: 64px;
+        color: #fff;
+      }
+    }
+
+    .content-flex {
+      display: flex;
+      justify-content: space-between;
+      max-width: 75%;
+      padding: 30px 0;
+
+      .part {
+        display: flex;
+      }
+    }
+
+    .gallarey {
+      position: absolute;
+      left: calc(5rem + 3vw);
+      top: calc(3rem + 3vw);
+      z-index: 10001;
+      line-height: 1.075;
+      color: #fff;
+      font-size: 94px;
+      text-align: center;
+      border-bottom: 1px solid transparent;
+      transition: ease-out 0.2s;
+
+      @media (max-width: 600px) {
+        font-size: 3rem;
+      }
+
+      &:hover {
+        border-bottom: 1px solid #fff;
+      }
+    }
+
+    .gallarey-wrapper {
+      display: flex;
+      justify-content: center;
+    }
+
+    &-line {
+      overflow: hidden;
+    }
+  }
+
+  &__nav {
+    display: flex;
+    position: absolute;
+    left: 100px;
+    bottom: 0px;
+    z-index: 10;
+
+    @media (max-width: 600px) {
+      left: 10px;
+    }
+  }
+
+  .bullet-item {
+    -webkit-writing-mode: vertical-rl;
+    writing-mode: tb-rl;
+    transform: rotate(180deg);
+    margin-top: -80px;
+    margin-left: -18px;
+    color: transparent;
+    font-size: 0px;
+  }
+
+  &-bullet {
+    display: flex;
+    align-items: center;
+    padding: 60px 0;
+    width: 15px;
+
+    &:hover > .bullet-item {
+      font-size: 12px;
+      color: #fff;
+      transition: ease 0.5s;
+    }
+
+    &__text {
+      color: #fff;
+      font-size: 0.65rem;
+    }
+
+    &__line {
+      background-color: transparent;
+      height: 1px;
+      width: 1rem;
+    }
+  }
+}
+// END SLIDER CONTENT
+
+// SLIDER TWO CONTENT
+.slider_Two {
+  .wfifty {
+    width: 50% !important;
+  }
+
+  &__text {
+    position: absolute;
+    left: 25vw;
+    bottom: -50vw;
+    z-index: 10;
+    color: #fff;
+    overflow: hidden;
+
+    @media (max-width: 1340px) {
+      left: 20vw;
+    }
+
+    @media (max-width: 600px) {
+      left: 12vw;
+    }
+
+    h2 {
+      font-size: 8rem;
+
+      @media (max-width: 1000px) {
+        font-size: 6rem;
+      }
+
+      @media (max-width: 800px) {
+        font-size: 4rem;
+      }
+
+      @media (max-width: 600px) {
+        font-size: 3.2rem;
+      }
     }
 
     span {
@@ -212,6 +494,16 @@ footer {
     p {
       font-size: 54px;
       line-height: 80px;
+
+      @media (max-width: 1340px) {
+        font-size: 44px;
+        line-height: 54px;
+      }
+
+      @media (max-width: 1340px) {
+        font-size: 34px;
+        line-height: 44px;
+      }
 
       &.small {
         font-size: 14px;
@@ -291,8 +583,12 @@ footer {
     display: flex;
     position: absolute;
     left: 100px;
-    bottom: 0px;
+    bottom: -400px;
     z-index: 10;
+
+    @media (max-width: 600px) {
+      left: 10px;
+    }
   }
 
   .bullet-item {
@@ -346,6 +642,10 @@ footer {
   z-index: 10000;
   transform: scale(1);
 
+  @media (max-width: 800px) {
+    display: none !important;
+  }
+
   &.active {
     opacity: 1;
     transform: scale(0);
@@ -375,6 +675,10 @@ footer {
   pointer-events: none;
   z-index: 10000;
   transform: translate(0px, 0px);
+
+  @media (max-width: 800px) {
+    display: none !important;
+  }
 
   p {
     color: red;
@@ -411,7 +715,7 @@ footer {
   z-index: 20;
 
   .percent-title {
-    font-family: 'Gordita Bold';
+    font-family: "Gordita Bold";
     font-size: 18rem;
     position: absolute;
     left: 26vw;
@@ -419,16 +723,27 @@ footer {
     z-index: 10;
     color: #fff;
     overflow: hidden;
+
+    @media (max-width: 800px) {
+      font-size: 8rem;
+      left: 12vw;
+      top: 46vw;
+    }
   }
 
   .percent {
-    font-family: 'Gordita Bold';
+    font-family: "Gordita Bold";
     font-size: 5rem;
     position: absolute;
     left: 50vw;
     top: 16vw;
     color: #fff;
     overflow: hidden;
+
+    @media (max-width: 600px) {
+      font-size: 3rem;
+      top: 36vw;
+    }
 
     div {
       display: flex;
@@ -449,10 +764,10 @@ footer {
   bottom: -100vw;
 }
 
-// .slider__text-Two {
-//   position: absolute;
-//   left: calc(25rem + 3vw) !important;
-//   bottom: -100vw !important;
-//   z-index: 10;
-//   color: #fff;
-// }
+.background-contact {
+  position: absolute;
+  width: 100%;
+  height: 100vh;
+  background: #8c8c90;
+  z-index: 0;
+}
