--- a/DLS/scss/style.scss
+++ b/DLS/scss/style.scss
@@ -8,15 +8,14 @@ section {
 
 header {
   .top_bar {
-    background: url("/assets/images/bg-top_bar.png") no-repeat center top/cover;
+    background: url('../images/bg-top_bar.png') no-repeat center top/cover;
     color: #fff;
   }
 }
 
 main {
   section#main {
-    background: url("/assets/images/bg-main_section.png") no-repeat center
-      top/cover;
+    background: url('../images/bg-main_section.png') no-repeat center top/cover;
     min-height: 100vh;
   }
 
@@ -45,7 +44,7 @@ main {
     }
 
     .advantages_info-wrapper {
-      background: url("/assets/images/bg-thith-section-4.png") no-repeat center
+      background: url('../images/bg-thith-section-4.png') no-repeat center
         top/cover;
       min-height: 60vh;
 
